--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   align-items: center;
   text-align: right;
-  padding-left: 20vh;
+  padding-left: 40rem;
 }
 #page-wrapper {
   position: relative;
